--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,28 +5,29 @@
     <li><a routerLink="/home" class="hover:underline cursor-pointer">Inicio</a></li>
     <li><a href="#" class="hover:underline">Cuentas</a></li>
     <li><a href="#" class="hover:underline">Transferencias</a></li>
-    <li><a routerLink="/profile" class="hover:underline cursor-pointer">Perfil</a></li>
+    <li><a routerLink="/profile" class="hover:underline cursor-pointer bg-white bg-opacity-20 px-3 py-1 rounded">Perfil</a></li>
   </ul>
 </nav>
 
-<!-- CONTENIDO -->
 <div class="p-6 bg-white min-h-screen">
-  <h2 class="text-2xl font-bold text-gray-800 mb-4">Tus transacciones</h2>
+  <h2 class="text-2xl font-bold text-gray-800 mb-4">Usuarios (Información sensible expuesta)</h2>
 
   <!-- TABLA PrimeNG -->
   <p-table [value]="users" class="p-datatable-sm">
     <ng-template pTemplate="header">
       <tr>
-        <th>id</th>
-        <th>cliente</th>
-        <th>email</th>
+        <th>ID</th>
+        <th>Nombre</th>
+        <th>Email</th>
+        <th class="text-red-600">Contraseña</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-user>
       <tr>
         <td>{{ user.id }}</td>
         <td>{{ user.full_name }}</td>
-        <td class="text-green-600 font-semibold">{{ user.email }}</td>
+        <td>{{ user.email }}</td>
+        <td class="text-red-600 font-mono">{{ user.password }}</td>
       </tr>
     </ng-template>
   </p-table>
