add: usuario logueado sin token

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <!-- NAVBAR -->
-<nav class="flex items-center justify-between px-6 py-4 bg-gradient-to-r from-orange-500 to-yellow-400 text-white shadow-md">
+<nav
+  class="flex items-center justify-between px-6 py-4 bg-gradient-to-r from-orange-500 to-yellow-400 text-white shadow-md">
   <div class="text-2xl font-bold">altoke</div>
   <ul class="flex space-x-6 font-medium">
     <li><a routerLink="/home" class="hover:underline cursor-pointer">Inicio</a></li>
@@ -11,10 +12,9 @@
 
 <!-- CONTENIDO -->
 <div class="p-6 bg-white min-h-screen">
-  <h2 class="text-2xl font-bold text-gray-800 mb-4">Tus transacciones</h2>
-
-  <!-- TABLA PrimeNG -->
-  <p-table [value]="users" class="p-datatable-sm">
+  <!-- TABLA PrimeNG: Usuario logueado -->
+  <h1 class="text-2xl font-bold text-gray-800 mb-4">Usuario Logueado</h1>
+  <p-table [value]="usuarioLogueado" class="p-datatable-sm mb-8">
     <ng-template pTemplate="header">
       <tr>
         <th>id</th>
@@ -30,4 +30,25 @@
       </tr>
     </ng-template>
   </p-table>
+
+  <!-- TABLA PrimeNG: Usuarios del backend -->
+  <div class="mt-20">
+    <h1 class="text-2xl font-bold text-gray-800 mb-4">Clientes</h1>
+    <p-table [value]="users" class="p-datatable-sm">
+      <ng-template pTemplate="header">
+        <tr>
+          <th>id</th>
+          <th>cliente</th>
+          <th>email</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-user>
+        <tr>
+          <td>{{ user.id }}</td>
+          <td>{{ user.full_name }}</td>
+          <td class="text-green-600 font-semibold">{{ user.email }}</td>
+        </tr>
+      </ng-template>
+    </p-table>
+  </div>
 </div>
