Add: realizar transacciones ilimitadas

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,8 +4,7 @@
   <div class="text-2xl font-bold">altoke</div>
   <ul class="flex space-x-6 font-medium">
     <li><a routerLink="/home" class="hover:underline cursor-pointer">Inicio</a></li>
-    <li><a href="#" class="hover:underline">Cuentas</a></li>
-    <li><a href="#" class="hover:underline">Transferencias</a></li>
+    <li><a routerLink="/transaction" class="hover:underline">Transferencias</a></li>
     <li><a routerLink="/profile"
         class="hover:underline cursor-pointer bg-white bg-opacity-20 px-3 py-1 rounded">Perfil</a></li>
   </ul>
